--- a/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
+++ b/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
@@ -37,7 +37,7 @@
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.2.5 <date>2022</date>
+                <edition>v 1.2.8 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -67,7 +67,7 @@
                         <sourceDesc>
                                 <bibl key="toh597" type="text">
                                         <ref>Toh 597</ref>
-                                        <biblScope>Degé Kangyur, vol. 90 (rgyud, pha), folios
+                                        <biblScope>Degé Kangyur, vol. 90 (rgyud ’bum, pha), folios
                                                 243.b–248.a</biblScope>
                                         <author role="translatorTib">Jinamitra</author>
                                         <author role="translatorTib">Surendrabodhi</author>
@@ -93,7 +93,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-09-30T15:01:48.668Z" user="admin">30/09/2022 15:01:48</note>
+                                <note type="lastUpdated" date-time="2023-01-26T20:30:42.041Z" user="admin">26/01/2023 20:30:42</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:50:56.094Z" user="line-tofte">Auto
@@ -141,6 +141,9 @@
                             <note type="updated" update="text-version" value="1.2.3" date-time="2022-09-18T11:44:07.957Z" user="john">Further edits, addition of bifurcated texts for notes 28,34, and 36, correction of typos, correction of name for the assembly hall.</note>
                             <note type="updated" update="text-version" value="1.2.4" date-time="2022-09-18T11:57:24.981Z" user="john">Typo corrected.</note>
                             <note type="updated" update="text-version" value="1.2.5" date-time="2022-09-30T15:01:44.562Z" user="john">Small edits to dhāraṇī</note>
+                            <note type="updated" update="text-version" value="1.2.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+                            <note type="updated" update="text-version" value="1.2.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                            <note type="updated" update="text-version" value="1.2.8" date-time="2023-01-26T20:30:39.194Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -473,7 +476,7 @@
                                                 in the Tantra Collection (<foreign xml:lang="Bo-Ltn">rgyud ’bum</foreign>) and the Compendium of
                                                 Dhāraṇīs (<foreign xml:lang="Bo-Ltn">gzungs
                                                   ’dus</foreign>) sections in the Degé Kangyur<note place="end" xml:id="UT22084-090-041-198">
-                                                  <p key="toh984" tid="78">This text, Toh 984, and
+                                                  <p key="toh984">This text, Toh 984, and
                                                   all those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs, waM</foreign>), are
                                                   listed as being located in volume 101 of the Degé
                                                   Kangyur by the Buddhist Digital Resource Center
@@ -501,7 +504,7 @@
                                                   translation.</p>
                                                   <!--THE FOLLOWING ONLY NEEDED FOR TEXTS WITH MULTIPLE TOH VERSIONS OTHERWISE OMIT
                      AND REMOVE THE <p> ELEMENT-->
-                                                  <p key="toh597" tid="79">Note that there is a
+                                                  <p key="toh597">Note that there is a
                                                   discrepancy among various databases for cataloging
                                                   the Toh 984 version of this text within vol. 101
                                                   or 102 of the Degé Kangyur. See Toh 984, <ref target="https://read.84000.co/translation/toh984.html#end-note-UT22084-090-041-198">note 13</ref>, for details.</p>
@@ -726,14 +729,14 @@
                                         <p rend="mantra" tid="87">“<mantra type="dharani" xml:lang="Sa-Ltn" key="toh597">namo
                                                 ratna trayāya |</mantra>
                         <note place="end" xml:id="UT22084-090-041-58">
-                            <p key="toh597" tid="88">This opening homage
+                            <p key="toh597">This opening homage
                                                         to the Three Jewels is included here only in Toh 597, the version 
                                                         of the text in the Action Tantra section of the Degé Kangyur, 
                                                         and is not present in Toh 984, the supposedly duplicate reiteration in the Dhāraṇī
                                                         section. Moreover, it is only in the Degé Kangyur that the dhāraṇī in the Action Tantra version includes this homage;  
                                                         it does not appear in the Action Tantra recensions 
                                                         in the Yongle, Narthang, Lhasa, and Stok Palace Kangyurs.</p>
-                                                        <p key="toh984" tid="89">An opening homage
+                                                        <p key="toh984">An opening homage
                                                           to the Three Jewels, <foreign xml:lang="Sa-Ltn">namo
                                                                   ratna trayāya</foreign>, is added here in Toh 597, the version 
                                                                 of the text in the Action Tantra section of the Degé Kangyur, 
@@ -787,14 +790,14 @@
                         <mantra type="dharani" xml:lang="Sa-Ltn" key="toh984">sarva­ta­thāgata­­samaya 
                                                                 ādhiṣṭhānādhiṣṭhite</mantra>
                         <note place="end" xml:id="UT22084-090-041-207">
-                                                        <p key="toh597" tid="90">This is the anomalous phrase mentioned in the introduction at <ptr target="#UT22084-090-041-212"/>. 
+                                                        <p key="toh597">This is the anomalous phrase mentioned in the introduction at <ptr target="#UT22084-090-041-212"/>. 
                                                                 In place of the reading <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya | ādhiṣṭhāna</foreign> here in the Degé of Toh 597 
                                                                 and in the equivalent texts in the Lithang and Cone Kangyurs, the 
                                                                 supposedly duplicate reiteration of this text in the Dhāraṇī section, Toh 984, instead reads 
                                                                 <foreign xml:lang="Sa-Ltn">sarva­ta­thāgata­­samaya ādhiṣṭhānādhiṣṭhite</foreign>. The Sanskrit manuscripts
                                                                 as edited by Hidas read <foreign xml:lang="Sa-Ltn">sarva­­tathāgata­­hṛdayādhiṣṭhānādhiṣṭhite</foreign>. However, in other Kangyurs, including the Narthang, 
                                                                 Lhasa, and Stok Palace, the phrase is omitted altogether. See also <ptr target="#UT22084-090-041-209"/>.</p>
-                                                        <p key="toh984" tid="91">This is the anomalous phrase mentioned in the introduction at <ptr target="#UT22084-090-041-212"/>. 
+                                                        <p key="toh984">This is the anomalous phrase mentioned in the introduction at <ptr target="#UT22084-090-041-212"/>. 
                                                                 In place of the reading <foreign xml:lang="Sa-Ltn">sarva­ta­thāgata­­samaya ādhiṣṭhānādhiṣṭhite</foreign> here 
                                                                 in Toh 984 in the Dhāraṇī section of the Degé, the Toh 597 version of the text in the Action Tantra section instead 
                                                                 reads <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya | ādhiṣṭhāna</foreign>, as do the equivalent texts in the Lithang 
@@ -812,14 +815,14 @@
                         <mantra type="dharani" xml:lang="Sa-Ltn" key="toh984">samantān mocaya 
                                                         mocaya</mantra>
                         <note place="end" xml:id="UT22084-090-041-209">
-                            <p key="toh597" tid="92">At this point in most versions 
+                            <p key="toh597">At this point in most versions 
                                                         of the dhāraṇī comes the phrase <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya</foreign> which, while it is absent here in the 
                                                           Degé text of Toh 597, the version of this work in the Action Tantra section, is present in Toh 984, the supposedly duplicate reiteration in the Dhāraṇī section, as well as in the Stok Palace Kangyur, 
                                                           and in the Sanskrit manuscripts according to Hidas’ edition; in the Narthang and Lhasa Kangyurs it reads <foreign xml:lang="Sa-Ltn">samantā mocaya mocaya</foreign>. The phrase (in 
                                                           one or other of these two spellings) is also present in all other canonical versions of the dhāraṇī in this group of texts—with the exception of the heavily abridged version in the 
                                                           Phukdrak Kangyur (see <ptr target="#UT22084-090-041-214"/>). See also <ptr target="#UT22084-090-041-207"/>; one could speculate that this phrase might possibly have been displaced 
                                                           at some point by a scribal error.</p>
-                                                                <p key="toh984" tid="93">The phrase here <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya</foreign> is absent at this point in the 
+                                                                <p key="toh984">The phrase here <foreign xml:lang="Sa-Ltn">samantān mocaya mocaya</foreign> is absent at this point in the 
                                                                         Degé text of Toh 597 in the Action Tantra section, despite this version, Toh 984, being its supposedly duplicate reiteration. The same phrase is also present in the Stok Palace Kangyur, 
                                                                         and in the Sanskrit manuscripts according to Hidas’ edition; in the Narthang and Lhasa Kangyurs it reads <foreign xml:lang="Sa-Ltn">samantā mocaya mocaya</foreign>. In 
                                                                         one or other of these two spellings it is also present in all other canonical versions of the dhāraṇī in this group of texts—with the exception of the heavily abridged version in the 
