--- a/translations/kangyur/translations/090-042_toh598-the_practice_of_the_incantation_of_usnisavijaya.xml
+++ b/translations/kangyur/translations/090-042_toh598-the_practice_of_the_incantation_of_usnisavijaya.xml
@@ -26,7 +26,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.4.2 <date>2022</date>
+                <edition>v 1.4.5 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -51,7 +51,7 @@
       <sourceDesc>
         <bibl key="toh598" type="text">
           <ref>Toh 598</ref>
-          <biblScope>Degé Kangyur, vol. 90 (rgyud, pha), folios 248.a–250.a</biblScope>
+          <biblScope>Degé Kangyur, vol. 90 (rgyud ’bum, pha), folios 248.a–250.a</biblScope>
           <author role="translatorTib">Lotsāwa Neten Palkyi Nyima Gyaltsen Sangpo</author>
           <author role="translatorTib">Ne’u Khenpo</author>
           <location work="UT4CZ5369" count-pages="5">
@@ -62,7 +62,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-10-17T18:48:03.552Z" user="admin">17/10/2022 18:48:03</note>
+        <note type="lastUpdated" date-time="2023-01-26T20:31:49.455Z" user="admin">26/01/2023 20:31:49</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:58:16.058Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:58:16.058Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-12-16T08:24:15.715Z" user="line-tofte">3</note>
@@ -107,6 +107,9 @@
           <note type="updated" update="text-version" value="1.3.1" date-time="2022-09-19T09:49:02.249Z" user="sameer">Updated dhāraṇī to match the Degé reading, added final sections of the introduction and updated notes.</note>
           <note type="updated" update="text-version" value="1.4.1" date-time="2022-09-30T18:14:34.758Z" user="john">Added material to introduction and added and edited notes.</note>
           <note type="updated" update="text-version" value="1.4.2" date-time="2022-10-17T18:48:00.692Z" user="celso">Fixed bad link</note>
+          <note type="updated" update="text-version" value="1.4.3" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+          <note type="updated" update="text-version" value="1.4.4" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+          <note type="updated" update="text-version" value="1.4.5" date-time="2023-01-26T20:31:46.6Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
