--- a/translations/kangyur/translations/091-071_toh673a-the_essence_of_amitayus.xml
+++ b/translations/kangyur/translations/091-071_toh673a-the_essence_of_amitayus.xml
@@ -32,7 +32,7 @@
                 <editor role="proofreader" ref="contributors.xml#person-232">Ben Gleason</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -55,7 +55,7 @@
             <sourceDesc>
                 <bibl key="toh673a" type="text">
                     <ref>Toh 673a</ref>
-                    <biblScope>Degé Kangyur, vol. 91 (rgyud, ba), folio 211.b</biblScope>
+                    <biblScope>Degé Kangyur, vol. 91 (rgyud ’bum, ba), folio 211.b</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
                         <volume number="91" start-page="422" end-page="422"/>
                     </location>
@@ -64,7 +64,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-01T20:04:08.287Z" user="admin">01/03/2022 20:04:08</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:32:51.319Z" user="admin">26/01/2023 20:32:51</note>
 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:24:10.173Z" user="mike">2.d</note>
@@ -88,7 +88,7 @@
     <note type="updated" update="text-version" value="1.0.0" date-time="2021-06-18T19:12:26.97Z" user="john">First published version. </note>
     <note type="updated" update="translation-status" value="1" date-time="2021-06-18T19:13:13.803Z" user="john">1</note>
     <note type="updated" update="text-version" value="1.0.1" date-time="2021-06-18T19:13:13.803Z" user="john">1.0.1</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2021-06-19T07:47:09.127Z" user="john">A few corrections from Konchog and Wiesiek</note>    <note type="updated" update="text-version" value="1.0.3" date-time="2022-03-01T20:04:04.261Z" user="celso">update cache for a note missing on distribution</note>
+    <note type="updated" update="text-version" value="1.0.2" date-time="2021-06-19T07:47:09.127Z" user="john">A few corrections from Konchog and Wiesiek</note>    <note type="updated" update="text-version" value="1.0.3" date-time="2022-03-01T20:04:04.261Z" user="celso">update cache for a note missing on distribution</note>    <note type="updated" update="text-version" value="1.0.4" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.0.5" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-26T20:32:48.492Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
             </notesStmt>
         </fileDesc>
         <profileDesc>
