--- a/translations/kangyur/translations/094-006_toh729,1001-the_dharani_of_tara.xml
+++ b/translations/kangyur/translations/094-006_toh729,1001-the_dharani_of_tara.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.11 <date>2022</date>
+                <edition>v 1.1.14 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -48,7 +48,7 @@
             <sourceDesc>
                 <bibl key="toh729" type="text">
                     <ref>Toh 729</ref>
-                    <biblScope>Degé Kangyur vol. 94 (rgyud, tsha), folio 222.a</biblScope>
+                    <biblScope>Degé Kangyur vol. 94 (rgyud ’bum, tsha), folio 222.a</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
                         <volume number="94" start-page="443" end-page="443"/>
                     </location>
@@ -66,7 +66,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-07T18:10:35.716Z" user="admin">07/11/2022 18:10:35</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:35:45.632Z" user="admin">26/01/2023 20:35:45</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:58:10.068Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:58:10.068Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-06-09T09:22:10.724Z" user="line-tofte">2.h</note>
@@ -123,6 +123,9 @@
     <note type="updated" update="text-version" value="1.1.9" date-time="2022-10-26T20:08:46.875Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
     <note type="updated" update="text-version" value="1.1.10" date-time="2022-11-04T14:31:53.611Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
     <note type="updated" update="text-version" value="1.1.11" date-time="2022-11-07T18:10:32.888Z" user="martina-cotter">Added pending links.</note>
+    <note type="updated" update="text-version" value="1.1.12" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+    <note type="updated" update="text-version" value="1.1.13" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.1.14" date-time="2023-01-26T20:35:42.798Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
