--- a/translations/kangyur/translations/094-007_toh730,1002-the_dharani_taras_own_promise.xml
+++ b/translations/kangyur/translations/094-007_toh730,1002-the_dharani_taras_own_promise.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.4 <date>2022</date>
+                <edition>v 1.2.7 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -50,7 +50,7 @@
             <sourceDesc>
                 <bibl key="toh730" type="text">
                     <ref>Toh 730</ref>
-                    <biblScope>Degé Kangyur vol. 94 (rgyud, tsha), folios 222.a–222.b</biblScope>
+                    <biblScope>Degé Kangyur vol. 94 (rgyud ’bum, tsha), folios 222.a–222.b</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
                         <volume number="94" start-page="443" end-page="444"/>
                     </location>
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-07T18:12:16.522Z" user="admin">07/11/2022 18:12:16</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:36:37.031Z" user="admin">26/01/2023 20:36:37</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:59:39.705Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:59:39.705Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-06-09T09:25:43.199Z" user="line-tofte">2.h</note>
@@ -127,6 +127,9 @@
     <note type="updated" update="text-version" value="1.2.2" date-time="2022-10-26T20:09:58.374Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>
     <note type="updated" update="text-version" value="1.2.3" date-time="2022-11-04T14:36:41.351Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
     <note type="updated" update="text-version" value="1.2.4" date-time="2022-11-07T18:12:13.695Z" user="martina-cotter">Added pending links.</note>
+    <note type="updated" update="text-version" value="1.2.5" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+    <note type="updated" update="text-version" value="1.2.6" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.2.7" date-time="2023-01-26T20:36:34.191Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
