--- a/translations/kangyur/translations/094-008_toh731-the_sutra_of_tara_who_protects_from_the_eight_dangers.xml
+++ b/translations/kangyur/translations/094-008_toh731-the_sutra_of_tara_who_protects_from_the_eight_dangers.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.5 <date>2022</date>
+                <edition>v 1.2.8 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -58,7 +58,7 @@
             <sourceDesc>
                 <bibl key="toh731" type="text">
                     <ref>Toh 731</ref>
-                    <biblScope>Degé Kangyur, vol. 94 (rgyud, tsha), folios 222.b–224.b</biblScope>
+                    <biblScope>Degé Kangyur, vol. 94 (rgyud ’bum, tsha), folios 222.b–224.b</biblScope>
                     <location work="UT4CZ5369" count-pages="5">
                         <volume number="94" start-page="444" end-page="448"/>
                     </location>
@@ -67,7 +67,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-04T14:40:49.507Z" user="admin">04/11/2022 14:40:49</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:37:32.407Z" user="admin">26/01/2023 20:37:32</note>
                 <note type="updated" update="text-version" value="" date-time="2019-04-01T07:36:02.112Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-04-01T07:36:02.112Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-09-13T08:57:04.119Z" user="john">2.g</note>
@@ -106,7 +106,7 @@
     <note type="updated" update="text-version" value="1.1.9" date-time="2021-03-12T19:23:15.33Z" user="celso">Non-breaking spaces before dandas</note>
     <note type="updated" update="text-version" value="1.2.1" date-time="2021-03-23T11:54:04.54Z" user="john">Adjustments to 1,20, 1.29, dialogue punctuation, and corresponding mentions in intro, as discussed in editorial meeting.</note>
     <note type="updated" update="text-version" value="1.2.2" date-time="2021-03-23T11:55:15.127Z" user="john">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="1.2.3" date-time="2021-09-24T13:44:23.128Z" user="celso">updated "incantation" to "dhāraṇī"</note>    <note type="updated" update="text-version" value="1.2.4" date-time="2022-10-26T20:11:15.52Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.5" date-time="2022-11-04T14:40:46.701Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>
+    <note type="updated" update="text-version" value="1.2.3" date-time="2021-09-24T13:44:23.128Z" user="celso">updated "incantation" to "dhāraṇī"</note>    <note type="updated" update="text-version" value="1.2.4" date-time="2022-10-26T20:11:15.52Z" user="celso">Updated attribution from "Lhasey Lotsawa Translations" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.5" date-time="2022-11-04T14:40:46.701Z" user="celso">Update "Samye Translations and Publications" to "Samye Translations"</note>    <note type="updated" update="text-version" value="1.2.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.2.8" date-time="2023-01-26T20:37:29.565Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
