--- a/translations/kangyur/translations/094-013_toh736,995-the_incantation_of_parnasavari.xml
+++ b/translations/kangyur/translations/094-013_toh736,995-the_incantation_of_parnasavari.xml
@@ -32,7 +32,7 @@
     <editor role="finalReviewer" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.14 <date>2022</date>
+                <edition>v 1.1.17 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -58,7 +58,7 @@
             <sourceDesc>
                 <bibl key="toh736" type="text">
                     <ref>Toh 736</ref>
-                    <biblScope>Degé Kangyur, vol. 94 (rgyud, tsha), folios 228.b–229.a</biblScope>
+                    <biblScope>Degé Kangyur, vol. 94 (rgyud ’bum, tsha), folios 228.b–229.a</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
                         <volume number="94" start-page="456" end-page="457"/>
                     </location>
@@ -77,7 +77,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-29T18:41:40.416Z" user="admin">29/09/2022 18:41:40</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:38:25.997Z" user="admin">26/01/2023 20:38:25</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-14T12:42:32.2Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-04-14T12:42:32.2Z" user="line-tofte">2.e</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2020-04-15T09:53:04.257Z" user="line-tofte">2.b</note>
@@ -99,7 +99,7 @@
     <note type="updated" update="text-version" value="1.1.9" date-time="2020-11-25T15:59:54.666Z" user="celso">Updated pending links</note>
     <note type="updated" update="text-version" value="1.1.10" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
     <note type="updated" update="text-version" value="1.1.11" date-time="2021-03-17T20:01:49.836Z" user="celso">@key added to note to create alternate message regarding vol 100+ text</note>
-    <note type="updated" update="text-version" value="1.1.12" date-time="2021-09-24T13:48:59.425Z" user="celso">updated "incantation" to "dhāraṇī"</note>    <note type="updated" update="text-version" value="1.1.13" date-time="2022-04-11T12:15:20.477Z" user="laura">Bibliography update</note>    <note type="updated" update="text-version" value="1.1.14" date-time="2022-09-29T18:41:36.148Z" user="john">Glossary entry modified.</note>
+    <note type="updated" update="text-version" value="1.1.12" date-time="2021-09-24T13:48:59.425Z" user="celso">updated "incantation" to "dhāraṇī"</note>    <note type="updated" update="text-version" value="1.1.13" date-time="2022-04-11T12:15:20.477Z" user="laura">Bibliography update</note>    <note type="updated" update="text-version" value="1.1.14" date-time="2022-09-29T18:41:36.148Z" user="john">Glossary entry modified.</note>    <note type="updated" update="text-version" value="1.1.15" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.16" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.1.17" date-time="2023-01-26T20:38:23.176Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -209,9 +209,9 @@
                         thus in the Degé Kangyur <title xml:lang="en">The Dhāraṇī of Parṇaśavarī</title> appears 
                         once in the Tantra section as Toh 736, and again in the Compendium of 
                         Dhāraṇīs as Toh 995,<note place="end" xml:id="UT22084-094-013-63">
-                            <p key="toh736" tid="38">Note that there is a discrepancy among various databases for cataloging the Toh 995 version of
+                            <p key="toh736">Note that there is a discrepancy among various databases for cataloging the Toh 995 version of
                                 this text within vol. 101 or 102 of the Degé Kangyur. See Toh 995 <ref target="https://read.84000.co/translation/toh995.html#end-note-UT22084-094-013-63">note 4</ref> for details.</p>
-                            <p key="toh995" tid="39">This text, Toh 995, and
+                            <p key="toh995">This text, Toh 995, and
                             all those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, waM</foreign>), are 
                             listed as being located in volume
                             101 of the Degé Kangyur by the Buddhist Digital Resource Center (BDRC). However, several other Kangyur databases—including the
