--- a/translations/kangyur/translations/095-002_toh747-the_tantra_of_vajrapani_bhutadamara.xml
+++ b/translations/kangyur/translations/095-002_toh747-the_tantra_of_vajrapani_bhutadamara.xml
@@ -37,7 +37,7 @@
                     Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2022</date>
+                <edition>v 1.0.8 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
             <sourceDesc>
                 <bibl key="toh747" type="text">
                     <ref>Toh 747</ref>
-                    <biblScope>Degé Kangyur, vol. 95 (rgyud, dza), folios 238.a–263.a</biblScope>
+                    <biblScope>Degé Kangyur, vol. 95 (rgyud ’bum, dza), folios 238.a–263.a</biblScope>
                     <author role="translatorTib">Buddhākaravarma</author>
                     <author role="translatorTib">Chökyi Sherab</author>
                     <location work="UT4CZ5369" count-pages="51">
@@ -74,7 +74,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-30T21:03:24.075Z" user="admin">30/03/2022 21:03:24</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:39:26.578Z" user="admin">26/01/2023 20:39:26</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:25:36.907Z" user="mike">2.d</note>
@@ -102,6 +102,9 @@
     <note type="updated" update="text-version" value="1.0.3" date-time="2021-01-26T22:00:19.598Z" user="celso">corrected a mislabed foreign tags</note>
     <note type="updated" update="text-version" value="1.0.4" date-time="2022-01-12T08:13:17.648Z" user="andre">Fixed glossary entry for "preta/gdon" (due to discrepancy between Tib and Skt source)</note>
     <note type="updated" update="text-version" value="1.0.5" date-time="2022-03-30T21:03:20.166Z" user="celso">Blocked glossary linking in Sanskrit appendix, and made minor caching adjustments. Removed unused glossary entry</note>
+    <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+    <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.0.8" date-time="2023-01-26T20:39:23.64Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
