--- a/translations/kangyur/translations/095-005_toh750,949-vajra_conqueror.xml
+++ b/translations/kangyur/translations/095-005_toh750,949-vajra_conqueror.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" ref="eft:person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.7 <date>2022</date>
+                <edition>v 1.0.10 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -53,7 +53,7 @@
             <sourceDesc>
                 <bibl key="toh750" type="text">
                     <ref>Toh 750</ref>
-                    <biblScope>Degé Kangyur, vol. 95 (rgyud, dza), folios 265.b–266.b</biblScope>
+                    <biblScope>Degé Kangyur, vol. 95 (rgyud ’bum, dza), folios 265.b–266.b</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
                         <volume number="95" start-page="530" end-page="532"/>
                     </location>
@@ -71,7 +71,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:45:35.553Z" user="admin">26/07/2022 07:45:35</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:40:15.423Z" user="admin">26/01/2023 20:40:15</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-04T15:19:18.304Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-04T15:19:18.304Z" user="line-tofte">2.h</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2021-03-24T11:24:42.397Z" user="line-tofte">2.g</note>
@@ -129,6 +129,9 @@
                     1.2: "Though the power of the Buddha..."</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2022-05-02T22:09:38.212Z" user="laura">Revisions from translator</note>
                 <note type="updated" update="text-version" value="1.0.7" date-time="2022-07-26T07:45:27.908Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.0.8" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.9" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.0.10" date-time="2023-01-26T20:40:12.571Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -197,9 +200,9 @@
                     <p tid="10">This translation is based on the Degé Kangyur xylograph, while the Comparative Edition (Tib. <foreign xml:lang="Bo-Ltn" type="term">dpe bsdur ma</foreign>) and Stok Palace Kangyurs were consulted to clarify problematic
                         readings. Within the Degé canon, the dhāraṇī is included twice: once in the Tantra section (Tib. <foreign xml:lang="Bo-Ltn" type="term">rgyud</foreign>, Toh 750), and once in the Dhāraṇī section (Tib. <foreign xml:lang="Bo-Ltn" type="term">gzungs
                             ’dus</foreign>, Toh 949).<note place="end" xml:id="UT22084-095-005-139">
-                            <p key="toh750" tid="41">Note that there is a discrepancy among various databases for cataloging the Toh 949 version of
+                            <p key="toh750">Note that there is a discrepancy among various databases for cataloging the Toh 949 version of
                                 this text within vol. 101 or 102 of the Degé Kangyur. See Toh 949, <ref target="https://read.84000.co/translation/toh949.html#end-note-UT22084-095-005-139">note 6</ref> for details.</p>
-                            <p key="toh949" tid="42">This text, Toh 949, and all those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, waM</foreign>), are listed as being located in volume 101 of the Degé Kangyur by the Buddhist
+                            <p key="toh949">This text, Toh 949, and all those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, waM</foreign>), are listed as being located in volume 101 of the Degé Kangyur by the Buddhist
                                 Digital Resource Center (BDRC). However, several other Kangyur databases—including the eKangyur that supplies the
                                 digital input version displayed by the 84000 Reading Room—list this work as being located in volume 102. This
                                 discrepancy is partly due to the fact that the two volumes of the <foreign xml:lang="Bo-Ltn">gzungs ’dus</foreign>
