--- a/translations/kangyur/translations/095-005_toh750,949-vajra_conqueror.xml
+++ b/translations/kangyur/translations/095-005_toh750,949-vajra_conqueror.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" ref="eft:person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.10 <date>2022</date>
+                <edition>v 1.0.11 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -71,7 +71,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-26T20:40:15.423Z" user="admin">26/01/2023 20:40:15</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:41:46.539Z" user="admin">26/01/2023 20:41:46</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-04T15:19:18.304Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-04T15:19:18.304Z" user="line-tofte">2.h</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2021-03-24T11:24:42.397Z" user="line-tofte">2.g</note>
@@ -132,6 +132,7 @@
                 <note type="updated" update="text-version" value="1.0.8" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.9" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
                 <note type="updated" update="text-version" value="1.0.10" date-time="2023-01-26T20:40:12.571Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
+                <note type="updated" update="text-version" value="1.0.11" date-time="2023-01-26T20:41:43.701Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
