--- a/translations/kangyur/translations/088-008_toh514,854-discourse_dharani_buddhas_essence.xml
+++ b/translations/kangyur/translations/088-008_toh514,854-discourse_dharani_buddhas_essence.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">Dr. John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.12 <date>2022</date>
+                <edition>v 1.1.16 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -44,7 +44,7 @@
             <sourceDesc>
                 <bibl key="toh514" type="text">
                     <ref>Toh 514</ref>
-                    <biblScope>Degé Kangyur, vol. 88 (rgyud ’bum, na), folios 27.b–29.b (in 1737 par phud printing), folios 44.b–46.b (in later printings)</biblScope>
+                    <biblScope>Degé Kangyur, vol. 88 (rgyud ’bum, na), folios 27.b–29.b (in 1737 <foreign xml:lang="Bo-Ltn">par phud</foreign> printing), folios 44.b–46.b (in later printings)</biblScope>
                     <author role="translatorTib">Jinamitra</author>
                     <author role="translatorTib">Dānaśīla</author>
                     <author role="translatorTib">Bandé Yeshé Dé</author>
@@ -70,7 +70,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-02T20:19:05.357Z" user="admin">02/03/2022 20:19:05</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:44:15.705Z" user="admin">26/01/2023 20:44:15</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-10T08:02:50.145Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-12-19T07:25:15.599Z" user="andreas">2.d</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
@@ -96,7 +96,7 @@
     <note type="updated" update="text-version" value="1.1.8" date-time="2021-02-12T20:06:26.012Z" user="celso">"teacher" to "preceptor" in colophon</note>
     <note type="updated" update="text-version" value="1.1.9" date-time="2021-03-16T16:09:33.891Z" user="celso">Note with @key added explaining the folio shift in toh514</note>
     <note type="updated" update="text-version" value="1.1.10" date-time="2021-03-17T16:11:17.617Z" user="celso">fixed minor typo</note>
-    <note type="updated" update="text-version" value="1.1.11" date-time="2021-09-23T20:07:02.725Z" user="celso">"Compendium of Incantations" to "Compendium of Dhāraṇīs"</note>    <note type="updated" update="text-version" value="1.1.12" date-time="2022-03-02T20:19:01.219Z" user="celso">update cache for a note missing on distribution</note>
+    <note type="updated" update="text-version" value="1.1.11" date-time="2021-09-23T20:07:02.725Z" user="celso">"Compendium of Incantations" to "Compendium of Dhāraṇīs"</note>    <note type="updated" update="text-version" value="1.1.12" date-time="2022-03-02T20:19:01.219Z" user="celso">update cache for a note missing on distribution</note>    <note type="updated" update="text-version" value="1.1.13" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.14" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.15" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.1.16" date-time="2023-01-26T20:44:12.829Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -212,7 +212,7 @@
                         <ref cRef="F.44.b" key="toh514" type="folio" xml:id="UT22084-088-008-91"/>
                         <ref cRef="F.72.b" key="toh854" type="folio" xml:id="UT22084-088-008-92"/>
                         <note place="end" xml:id="UT22084-088-008-103">
-                            <p key="toh514" tid="54">Two sets of folio references have been included in this translation due to a discrepancy 
+                            <p key="toh514">Two sets of folio references have been included in this translation due to a discrepancy 
                                 in volume 88 (<foreign xml:lang="Bo-Ltn">rgyud ’bum</foreign>, <foreign xml:lang="Bo-Ltn">na</foreign>) of the Degé Kangyur between the 1737 <foreign xml:lang="Bo-Ltn">par 
                                     phud</foreign> printings and the late (post <foreign xml:lang="Bo-Ltn">par phud</foreign>) printings. In the latter case, 
                                 an extra work, <title xml:lang="Sa-Ltn">Bodhi­maṇḍasyālaṃkāra­lakṣa­dhāraṇī</title> (Toh 508, <title xml:lang="Bo-Ltn">byang chub 
@@ -220,7 +220,7 @@
                                 thereby displacing the pagination of all the following texts in the same volume 
                                 by 17 folios. Since the eKangyur follows the later printing, both references 
                                 have been provided, with the highlighted one linking to the eKangyur viewer.</p>
-                            <p key="toh854" tid="55">In the Toh 514 version of the text there is a slight discrepancy in the folio numbering between the 1737 <foreign xml:lang="Bo-Ltn">par phud</foreign> printings and the late (post <foreign xml:lang="Bo-Ltn">par phud</foreign>) printings of the Degé Kangyur. Although the discrepancy is irrelevant here, further details concerning this may be found in <ref target="https://read.84000.co/translation/toh514.html#end-note-UT22084-088-008-103">note 10</ref> of the Toh 514 version of this text.</p>
+                            <p key="toh854">In the Toh 514 version of the text there is a slight discrepancy in the folio numbering between the 1737 <foreign xml:lang="Bo-Ltn">par phud</foreign> printings and the late (post <foreign xml:lang="Bo-Ltn">par phud</foreign>) printings of the Degé Kangyur. Although the discrepancy is irrelevant here, further details concerning this may be found in <ref target="https://read.84000.co/translation/toh514.html#end-note-UT22084-088-008-103">note 10</ref> of the Toh 514 version of this text.</p>
                         </note> Homage to all buddhas and bodhisattvas. </p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-088-008-21"/>
@@ -492,9 +492,9 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-088-008-74">
-                            <term>the lotus array</term>
-                            <term xml:lang="Bo-Ltn">pad+ma rnam par bkod pa </term>
+                        <gloss xml:id="UT22084-088-008-74" type="term" mode="match">
+                            <term>lotus array</term>
+                            <term xml:lang="Bo-Ltn">pad+ma rnam par bkod pa</term>
                             <term xml:lang="bo">པདྨ་རྣམ་པར་བཀོད་པ།</term>
                             <term xml:lang="Sa-Ltn">padmavyūha</term>
                             <term type="definition">The name of a samādhi.</term>
